# mocap-wrangle-rs

./: .gitignore  Cargo.toml  README.md  conv_model.py  eaf_extract.py
src/: bin.rs  lib.rs  main.rs
tests/: tests.rs
