[package]
name = "mocap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.26.1", features = ["lazy"] }
reqwest =  { version = "0.11.14", features = ["blocking"] }
color-eyre = "0.6"
rand = "0.8.5"
regex = "1.7.3"
clap = { version = "4.2.1", features = ["derive"] }
