[package]
name = "mocap"
version = "0.1.0"
edition = "2021"
author = "Peter Berck <peter.berck@humlab.lu.se>"
about = "Calculates 3D distances from X, Y and Z coordinates."
description = "Calculates 3D distances from X, Y and Z coordinates."
repository = "https://github.com/"
readme = "README.md"
homepage = "http://humlab.lu.se"
keywords = ["MoCap"]

[[bin]]
name = "mocap"
path = "src/main.rs"

[lib]
name = "mocap"
path = "src/lib.rs"

[dependencies]
polars = { version = "0.26.1", features = ["lazy"] }
reqwest =  { version = "0.11.14", features = ["blocking"] }
color-eyre = "0.6"
rand = "0.8.5"
regex = "1.7.3"
clap = { version = "4.2.1", features = ["derive"] }
simplelog = "0.12.1"
log = "0.4.17"

